# nullsec-trader

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PROJECT_STATE.md  README.md  SESSION_HANDOFF.md  TASK_QUEUE.md  ansiblex.py  candidate_engine.py  candidate_nodes.py  character_profile.py  confidence_calibration.py  config.json  config.local.example.json  config_loader.py  eve_character_client.py  eve_sso.py  execution_plan.py  explainability.py  fee_engine.py  fees.py  journal_cli.py  journal_models.py  journal_reconciliation.py  journal_reporting.py  journal_store.py  legacy_core.py  legacy_runtime.py  local_cache.py  location_utils.py  main.py  market_fetch.py  market_normalization.py  market_plausibility.py  models.py  no_trade.py  nullsectrader.py  portfolio_builder.py  pyproject.toml  requirements.txt  (+17 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: Ansis.txt
docs/module-maps/: README.md  ansiblex.md  candidate_engine.md  candidate_nodes.md  character_profile.md  confidence_calibration.md  eve_character_client.md  eve_sso.md  execution_plan.md  journal_reconciliation.md  journal_reporting.md  risk_profiles.md  route_search.md  runtime_common.md  runtime_runner.md  webapp.md
scripts/: quality_check.py
tests/: run_all.py  shared.py  test_active_character_service.py  test_active_profile_service.py  test_ansiblex.py  test_architecture.py  test_candidate_nodes.py  test_character_context.py  test_confidence_calibration.py  test_config.py  test_core.py  test_eve_sso.py  test_execution_plan.py  test_explainability.py  test_integration.py  test_journal.py  test_journal_reconciliation.py  test_no_trade.py  test_portfolio.py  test_risk_profiles.py  test_route_search.py  test_runtime_cleanup.py  test_runtime_reports.py  test_runtime_runner.py  test_shipping.py  test_webapp.py
tests/fixtures/: market_plausibility_fake_spread.json  market_plausibility_good.json  market_plausibility_reference_outlier.json  market_plausibility_thin_sell_wall.json  market_plausibility_unusable_depth.json  replay_dead_market_jita_cj6.json  replay_live_focused_o4t_jita_20260308.json  replay_profitable_jita_o4t.json
webapp/: __init__.py  __main__.py  app.py  security.py
webapp/routes/: __init__.py  pages.py
(+18 files in other folders)
