[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nullsec-trader-tool"
version = "0.1.0"
description = "Nullsec EVE structure trading assistant with chain routing and strict mode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31,<3",
  "fastapi>=0.115,<1",
  "jinja2>=3.1,<4",
  "uvicorn>=0.30,<1",
  "python-multipart>=0.0.9,<1"
]

[project.scripts]
nullsec-trader = "main:main"
nullsec-trader-web = "webapp.app:run_dev_server"

[tool.setuptools]
py-modules = [
  "main",
  "nullsectrader",
  "runtime_common",
  "runtime_cleanup",
  "runtime_clients",
  "runtime_reports",
  "runtime_runner",
  "startup_helpers",
  "candidate_engine",
  "character_profile",
  "confidence_calibration",
  "config_loader",
  "eve_character_client",
  "eve_sso",
  "execution_plan",
  "explainability",
  "fees",
  "fee_engine",
  "journal_cli",
  "journal_models",
  "journal_reporting",
  "journal_store",
  "location_utils",
  "local_cache",
  "market_fetch",
  "market_normalization",
  "market_plausibility",
  "models",
  "portfolio_builder",
  "route_search",
  "scoring",
  "shipping",
]

[tool.setuptools.packages.find]
include = ["webapp", "webapp.*"]

[tool.setuptools.package-data]
webapp = ["templates/*.html", "static/css/*.css", "static/js/*.js"]
